tests/snapshots/run_wpt_conformance__trtx_reduceMean_float16_1D_tensor_all_negative_integers_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float16 1D tensor all negative integers default options",
    "trtx",
    "PASS",
)
